# mosaic_photo_parallel

./: README.md
preprocessing/: .gitignore  CMakeLists.txt  README.md  preprocess_openmp.cpp  preprocess_pthread.cpp  preprocess_serial.cpp
